# pyhikvision

./: .gitignore  LICENSE  README.md  clean.sh  device_.py  pyproject.toml
examples/: connect.py  login_logout.py  playback.py  search.py
src/hikvision/: __init__.py  constants.py  device.py  enums.py  errors.py  playback_stream.py  sdk.py
src/hikvision/net/: __init__.py  dvr.py
src/hikvision/net_dvr/: __init__.py  net_dvr.py
src/hikvision/sdk/: __init__.py  error_codes.py  sdk.py
tests/: _test_device_utils.py  test_device.py  test_device_integration.py  test_net_dvr.py  test_playback_stream.py  test_sdk_login_logout_integration.py  test_sdk_runtime_loading.py
