[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhikvision"
version = "0.1.0"
description = "High-level Hikvision SDK Python wrapper"
requires-python = ">=3.9"
dependencies = [""]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hikvision = [
  "vendor/linux-x86_64/**/*.so",
  "vendor/linux-x86_64/**/*.so.*",
  "vendor/win-amd64/**/*.dll",
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require real Hikvision device and credentials",
]