[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhikvision"
dynamic = ["version"]
description = "High-level Hikvision SDK Python wrapper"
readme = "README.md"
authors = [{ name = "Kamil Okrasa", email = "kamokr@gmail.com" }]
requires-python = ">=3.9"
# dependencies = ["av"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools_scm]
write_to = "src/hikvision/__version__.py" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hikvision = [
  "vendor/linux-x86_64/**/*.so",
  "vendor/linux-x86_64/**/*.so.*",
  "vendor/win-amd64/**/*.dll",
]

[tool.pytest.ini_options]
markers = [
  "integration: tests that require real Hikvision device and credentials",
]